bugfix(Accordion): IDS-79 Align with designs
Small and large versions fix padding

--- a/packages/styles/scss/components/_accordion.scss
+++ b/packages/styles/scss/components/_accordion.scss
@@ -22,13 +22,19 @@
     @include font-styles("label-medium");
     justify-content: space-between;
     margin: 0;
-    padding: px-to-rem(calc($spacing-ui-padding-lg - 9px)) px-to-rem(36px)
-      px-to-rem(calc($spacing-ui-padding-lg - 9px)) 0;
+    padding: px-to-rem(calc($spacing-ui-padding-lg - 6px)) px-to-rem(36px)
+      px-to-rem(calc($spacing-ui-padding-lg - 6px)) 0;
     text-align: left;
     transition: border $transition-timing ease-out,
       background $transition-timing ease-out, color $transition-timing ease-out;
     width: 100%;
     @include dataurlicon("add", $color-ux-labels-actionable);
+
+    &--large {
+      @include font-styles("headline-6");
+      padding: px-to-rem(calc($spacing-ui-padding-lg - 3px)) px-to-rem(36px)
+        px-to-rem(calc($spacing-ui-padding-lg - 3px)) 0;
+    }
 
     &:hover,
     &:focus {
@@ -48,9 +54,15 @@
     }
 
     @include breakpoint("large") {
-      @include font-styles("label-large");
-      padding: px-to-rem(calc($spacing-ui-padding-xl - 16px)) px-to-rem(36px)
-        px-to-rem(calc($spacing-ui-padding-xl - 16px)) 0;
+      @include font-styles("label-medium");
+      padding: px-to-rem(calc($spacing-ui-padding-xl - 14px)) px-to-rem(36px)
+        px-to-rem(calc($spacing-ui-padding-xl - 14px)) 0;
+
+      &--large {
+        @include font-styles("headline-6");
+        padding: px-to-rem(calc($spacing-ui-padding-lg - 3px)) px-to-rem(36px)
+          px-to-rem(calc($spacing-ui-padding-lg - 3px)) 0;
+      }
     }
 
     &[aria-expanded="true"] {
